<resources>
    <string name="app_name">Izhevsk Online</string>
    <string name="title_activity_maps">Izhevsk Online</string>
    <string name="title_home">Дом</string>
    <string name="title_notifications">Карта</string>
    <string name="title_profile">Профиль</string>
    <string name="maininf">Монумент, посвящённый
        400-летию вхождения Удмуртии в
        состав России, открытый 26 июня
        1972 года…</string>
    <string name="opisanieinfo">Монумент имеет внушительную высоту — 46 метров. Между двумя пилонами, символизирующими Удмуртию и Россию,
        располагается множество позолоченных металлических рельефов, изображающих жизнь рабоче-крестьянского народа. Пилоны изготовлены из
        железобетона на ижевском предприятии «Промстройтрест». Сверху пилоны облицованы нержавеющей сталью. Горельефы, выполненные из кованой
        меди и покрытые позолотой, изготовлены на Экспериментальном скульптурно-производственном комбинате Московского отделения Художественного
        фонда РСФСР. С лицевой стороны, обращенной к пруду, между пилонами размещены скульптурные композиции «Мир», «Труд» и «Равенство».
        С противоположной стороны между пилонами установлены рельефы с геральдическими символами Удмуртии и России. Нижний рельеф монумента
        изображает кузнеца, работающего у наковальни. Вторая композиция, изображающая воинов с оружием в руках, символизирует защиту русскими
        и удмуртами социалистического отечества в годы Гражданской и Великой Отечественной войн. Завершают полосу рельефов аллегорические женские
        фигуры Удмуртии и России, держащие над собой стяг. Для лучшего восприятия контуры рельефов выделены позолотой. Автор композиции «Труд»,
        изображающей кузнеца, — С. К. Кузьмин. Общая идея монумента, авторство остальных горельефов, включая элементы с надписями «СССР» и «Удмуртская АССР»,
        принадлежит А. Н. Бурганову. Архитектор Р. К. Топуридзе разработал планировочную композицию, художники П. С. Семёнов и В. А. Табах участвовали в
        первоначальном проектировании. В 2008 году к празднованию 450-летия вхождения Удмуртии в состав Российского государства была проведена реконструкция
        монумента и окружающей его площади, появилась подсветка памятника в тёмное время суток. </string>
    <string name="raspolozhenieinfo">Монумент расположен на берегу Ижевского пруда, к которому спускается широкая вымощенная жёлтым камнем лестница.
        С другой стороны к нему идёт пешеходная дорога, вымощенная плиткой и отходящая от Центральной площади Ижевска. Таким образом, монумент является
        начальным элементом центральной эспланады Ижевска.</string>
    <string name="istoriasozdaniainfo">В 1958 году в рамках празднования 400-летия добровольного вхождения Удмуртии в состав России встал вопрос о сооружении
        монумента, который бы символизировал дружбу удмуртского и русского народов. В этот же год был заложен символический камень, который располагался в том
        месте, где сейчас находится Доска почёта на улице Пушкинской. 17 сентября 1969 года было подписано распоряжение Совета министров РСФСР № 2127-р,
        предписывавшее начать строительство монумента за счёт средств бюджета УАССР. К проектированию монумента приступили лишь в конце 60-х годов.
        Изначально предполагалось, что высота монумента составит 52 метра, и на нём будут изображены четыре скульптурные композиции: «Мир», «Труд», «Равенство» и
        «Современность». Но согласно требованиям авиации СССР на сооружениях выше 50 метров обязательно должны были стоять предупреждающие огни, которые портили
        бы общий вид сооружения. Поэтому решено было убрать один горельеф («Современность»), благодаря чему высота снизилась до 46 метров. Кроме того изначально в
        проект были включены две дополнительные невысокие стелы, которые составляли бы с монументом единое целое. Предполагалось, что они будут украшены цветными
        мозаиками из смальты, посвящёнными истории Удмуртии. Но, несмотря на то, что чертежи были утверждены в Москве, денег на сооружение стел в итоге не хватило.
        В ходе проектирования художники на огромном полотне масляной краской нарисовали эскиз монумента — получился так называемый «примерочный макет». 12 июня 1970
        года полотно подняли над землёй с помощью вертолёта. Чиновники посмотрели на него с земли и тогда уже утвердили эскиз окончательно.</string>
    <string name="interesniefacts">Возведение монумента обошлось в 347,8 тысячи советских рублей. Монумент имеет неофициальное название «Лыжи Кулаковой», так как по
        форме напоминает поставленную вертикально пару лыж и был открыт незадолго до того, как прославленная лыжница, жительница Ижевска, Галина Кулакова завоевала
        3 золотых медали в лыжных гонках на Олимпиаде в Саппоро. Сама Кулакова положительно относится к этому «прозвищу». Вместе с музеем М. Т. Калашникова номинировался
        от Ижевска на конкурс «Семь чудес России». Его изображение, обёрнутое во флаги России и Удмуртии стало центральной частью эмблемы празднования 450-летия
        добровольного вхождения Удмуртии в состав Российского государства. А также вошло в логотип празднований по случаю 250-летнего юбилея со дня основания Ижевска.
        Согласно народному поверью, если стоя лицом к монументу и пруду мысленно три раза задать вопрос, то придёт понимание, как поступать.</string>
    <string name="about_album_label">About %s</string>
    <string name="about_settings_summary">Team, social links</string>
    <string name="accent_color">Accent color</string>
    <string name="accent_color_desc">The theme accent color, defaults to purple</string>
    <string name="action_about">About</string>
    <string name="action_add_to_favorites">Add to favorites</string>
    <string name="action_add_to_playing_queue">Add to playing queue</string>
    <string name="action_add_to_playlist">Add to playlist</string>
    <string name="action_clear_playing_queue">Clear playing queue</string>
    <string name="action_cycle_repeat">Cycle repeat mode</string>
    <string name="action_delete">Delete</string>
    <string name="action_delete_from_device">Delete from device</string>
    <string name="action_details">Details</string>
    <string name="action_go_to_album">Go to album</string>
    <string name="action_go_to_artist">Go to artist</string>
    <string name="action_go_to_genre">Go to genre</string>
    <string name="action_go_to_start_directory">Go to start directory</string>
    <string name="action_grant">Grant</string>
    <string name="action_grid_size">Grid size</string>
    <string name="action_grid_size_land">Grid size (land)</string>
    <string name="action_new_playlist">New playlist</string>
    <string name="action_next">Next</string>
    <string name="action_play">Play</string>
    <string name="action_play_all">Play all</string>
    <string name="action_play_next">Play next</string>
    <string name="action_play_pause">Play/Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_remove_from_favorites">Remove from favorites</string>
    <string name="action_remove_from_playing_queue">Remove from playing queue</string>
    <string name="action_remove_from_playlist">Remove from playlist</string>
    <string name="action_rename">Rename</string>
    <string name="action_save_playing_queue">Save playing queue</string>
    <string name="action_scan">Scan</string>
    <string name="action_search">Search</string>
    <string name="action_set">Start</string>
    <string name="action_set_as_ringtone">Set as ringtone</string>
    <string name="action_set_as_start_directory">Set as start directory</string>
    <string name="action_settings">"Settings"</string>
    <string name="action_share">Share</string>
    <string name="action_shuffle_all">Shuffle all</string>
    <string name="action_shuffle_playlist">Shuffle playlist</string>
    <string name="action_sleep_timer">Sleep timer</string>
    <string name="action_sort_order">Sort order</string>
    <string name="action_tag_editor">Tag editor</string>
    <string name="action_toggle_favorite">Toggle favorite</string>
    <string name="action_toggle_shuffle">Toggle shuffle mode</string>
    <string name="adaptive">Adaptive</string>
    <string name="add_action">Add</string>
    <string name="add_playlist_title">"Add to playlist"</string>
    <string name="added_title_to_playing_queue">"Added 1 title to the playing queue."</string>
    <string name="added_x_titles_to_playing_queue">Added %1$d titles to the playing queue.</string>
    <string name="album">Album</string>
    <plurals name="albumSongs">
        <item quantity="one">Song</item>
        <item quantity="other">Songs</item>
    </plurals>
    <string name="album_artist">Album artist</string>
    <plurals name="albums">
        <item quantity="one">Album</item>
        <item quantity="other">Albums</item>
    </plurals>
    <string name="always">Always</string>
    <string name="app_share">Hey check out this cool music player at: https://play.google.com/store/apps/details?id=%s</string>
    <string name="app_shortcut_shuffle_all_short">Shuffle</string>
    <string name="app_shortcut_top_tracks_short">Top Tracks</string>
    <string name="app_widget_big_name">Full Image</string>
    <string name="app_widget_card_name">Card</string>
    <string name="app_widget_classic_name">Classic</string>
    <string name="app_widget_small_name">Small</string>
    <string name="app_widget_text_name">Minimal Text</string>
    <string name="artist">Artist</string>
    <string name="artists">Artists</string>
    <string name="audio_focus_denied">Audio focus denied.</string>
    <string name="audio_settings_summary">Change the sound settings and adjust the equalizer controls</string>
    <string name="auto">Auto</string>
    <string name="biography">Biography</string>
    <string name="black_theme_name">Just Black</string>
    <string name="blacklist">Blacklist</string>
    <string name="blur">Blur</string>
    <string name="blur_card">Blur Card</string>
    <string name="bug_report_failed">Unable to send report</string>
    <string name="bug_report_failed_invalid_token">Invalid access token. Please contact the app developer.</string>
    <string name="bug_report_failed_issues_not_available">Issues are not enabled for the selected repository. Please contact the app developer.</string>
    <string name="bug_report_failed_unknown">An unexpected error occurred. Please contact the app developer.</string>
    <string name="bug_report_failed_wrong_credentials">Wrong username or password</string>
    <string name="bug_report_issue">Issue</string>
    <string name="bug_report_manual">Send manually</string>
    <string name="bug_report_no_description">Please enter an issue description</string>
    <string name="bug_report_no_password">Please enter your valid GitHub password</string>
    <string name="bug_report_no_title">Please enter an issue title</string>
    <string name="bug_report_no_username">Please enter your valid GitHub username</string>
    <string name="bug_report_summary">An unexpected error occurred. Sorry you found this bug, if it keeps crashing \"Clear app data\" or send an Email </string>
    <string name="bug_report_use_account">Send using GitHub account</string>
    <string name="buy_now">Buy now</string>
    <string name="cancel_current_timer">Cancel</string>
    <string name="card">Card</string>
    <string name="card_color_style">Colored Card</string>
    <string name="card_square">Square Card</string>
    <string name="card_style">Card</string>
    <string name="carousal_effect_on_now_playing_screen">Carousel effect on the now playing screen</string>
    <string name="cascading">Cascading</string>
    <string name="changelog">Changelog</string>
    <string name="changelog_summary">Changelog maintained on the Telegram channel</string>
    <string name="circle">Circle</string>
    <string name="circular">Circular</string>
</resources>