<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.example.myapplication.MapsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_maps" />

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.myapplication.BlankFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_blank" />

    <fragment
        android:id="@+id/itemFragment"
        android:name="com.example.myapplication.ItemFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_item" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.myapplication.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>